--- a/keplink.html
+++ b/keplink.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <title>KÉPLINK</title>
+</head>
+<body>
 
+<h1>házifeladat</h1>
+<a href="https://en.wikipedia.org/wiki/Spaghetti"><img src="spagetti.jpg" alt="egy spagetti" title="spagetti" width="400"></a>
+
+<a href=""></a>
+
+</body>
+</html>
